--- a/xn-admin/src/main/resources/application.yml
+++ b/xn-admin/src/main/resources/application.yml
@@ -1,17 +1,17 @@
 # 项目相关配置
-#ruoyi:
+xn:
   # 名称
-  #name: RuoYi
+  name: XuNing
   # 版本
-  #version: 4.3.1
+  version: 4.3.1
   # 版权年份
-  #copyrightYear: 2019
+  copyrightYear: 2020
   # 实例演示开关
-  #demoEnabled: true
-  # 文件路径 示例（ Windows配置D:/ruoyi/uploadPath，Linux配置 /home/ruoyi/uploadPath）
-  #profile: D:/ruoyi/uploadPath
+  demoEnabled: true
+  # 文件路径 示例（ Windows配置D:/xn/uploadPath，Linux配置 /home/xn/uploadPath）
+  profile: D:/xn/uploadPath
   # 获取ip地址开关
-  #addressEnabled: false
+  addressEnabled: false
 
 # 开发环境配置
 server:
@@ -31,7 +31,7 @@ server:
 # 日志配置
 logging:
   level:
-    com.ruoyi: debug
+    com.timain: debug
     org.springframework: warn
 
 # 用户配置
@@ -73,7 +73,7 @@ spring:
 # MyBatis
 mybatis:
   # 搜索指定包别名
-  typeAliasesPackage: com.ruoyi.**.domain
+  typeAliasesPackage: com.timain.**.domain
   # 配置mapper的扫描，找到所有的mapper.xml映射文件
   mapperLocations: classpath*:mapper/**/*Mapper.xml
   # 加载全局的配置文件
